--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+#vs history
+*.history
 
 
 ## Ignore Visual Studio temporary files, build results, and
