--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.data.cassandra.password=cassandra
 spring.data.cassandra.username=cassandra
 spring.data.cassandra.serial-consistency-level=ONE
 spring.data.cassandra.ssl=false
+spring.data.cassandra.retry-policy=com.datastax.driver.core.policies.DefaultRetryPolicy
+
 
 #DEV TOOLS
 spring.devtools.restart.additional-paths=src/main/
