--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,29 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.0.0</spring-boot-admin.version>
+		<dse-driver.version>1.1.2</dse-driver.version>
 	</properties>
 
 	<dependencies>
+
+		  <!--We want to use dse-enterprise drivers -->	
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-mapping</artifactId>
+			<exclusions>
+           		<exclusion>
+                	<groupId>com.datastax.cassandra</groupId>
+               		 <artifactId>cassandra-driver-core</artifactId>
+          		 </exclusion>
+        	</exclusions>
+		</dependency>
+		 <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>dse-driver</artifactId>
+            <version>${dse-driver.version}</version>
+        </dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -37,10 +57,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-cassandra-reactive</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.datastax.cassandra</groupId>
-			<artifactId>cassandra-driver-mapping</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
