--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.0.0</spring-boot-admin.version>
 		<dse-driver.version>1.1.2</dse-driver.version>
+		<reactor.kafka.version>1.0.0.RELEASE</reactor.kafka.version>
 	</properties>
 
 	<dependencies>
@@ -45,6 +46,11 @@
             <version>${dse-driver.version}</version>
        	</dependency>
 
+		<dependency>
+  			  <groupId>io.projectreactor.kafka</groupId>
+  			  <artifactId>reactor-kafka</artifactId>
+ 			   <version>${reactor.kafka.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
