--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<spring-boot-admin.version>2.0.0</spring-boot-admin.version>
 		<dse-driver.version>1.1.2</dse-driver.version>
 		<reactor.kafka.version>1.0.0.RELEASE</reactor.kafka.version>
+		<springfox.version>2.8.0</springfox.version>
 	</properties>
 
 	<dependencies>
@@ -56,6 +57,25 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+		<dependency>
+  		   <groupId>org.springframework.boot</groupId>
+  		   <artifactId>spring-boot-starter-data-rest</artifactId>
+  		</dependency>
+		 <dependency>
+   			<groupId>io.springfox</groupId>
+  			<artifactId>springfox-swagger2</artifactId>
+   			<version>${springfox.version}</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>io.springfox</groupId>
+   			<artifactId>springfox-swagger-ui</artifactId>
+   			<version>${springfox.version}</version>
+ 		</dependency>  
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-cassandra</artifactId>
