Remove settings for vs and start to integrate sleuth + zipkin

--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,19 @@
             <artifactId>dse-driver</artifactId>
             <version>${dse-driver.version}</version>
        	</dependency>
-
+		<dependency>
+  			 <groupId>org.springframework.cloud</groupId>
+ 			 <artifactId>spring-cloud-starter-sleuth</artifactId>
+ 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>  
 		<dependency>
   			  <groupId>io.projectreactor.kafka</groupId>
   			  <artifactId>reactor-kafka</artifactId>
  			   <version>${reactor.kafka.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -104,7 +110,6 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -137,9 +142,26 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			 <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.RC1</version>
+                <type>pom</type>
+                <scope>import</scope>
+          </dependency>
 		</dependencies>
 	</dependencyManagement>
 
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/libs-milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
