--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,21 @@ spring.data.cassandra.ssl=false
 spring.data.cassandra.retry-policy=com.datastax.driver.core.policies.DefaultRetryPolicy
 
 
+# APACHE KAFKA (KafkaProperties)
+spring.kafka.bootstrap-servers=localhost:9092
+
+
+#Distributed tracing
+spring.sleuth.web.additionalSkipPattern=
+spring.application.name=Spring-Reactive
+logging.level.org.springframework.cloud.sleuth=DEBUG
+spring.sleuth.baggage-keys=brequestId,bgroupId
+propagation-keys=requestId,groupId
+management.endpoints.web.exposure.include=jolokia
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
+
+
 #DEV TOOLS
 spring.devtools.restart.additional-paths=src/main/
 spring.h2.console.enabled=true
@@ -30,5 +45,6 @@ logging.level.com.datastax.driver.core.QueryLogger.NORMAL=TRACE
 logging.level.com.datastax.driver.core.QueryLogger.SLOW=TRACE
 logging.level.com.datastax.driver.core.QueryLogger.ERROR=TRACE
 # Appender pattern for output to the console. Only supported with the default logback setup.
-logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} CID : %X{correlation-ID} - %msg%n
-logging.pattern.file=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} %X{correlation-ID} - %msg%n
+# Appender pattern for output to the console. Only supported with the default logback setup.
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS},${spring.application.name},${PID:- },[%thread],%-5level,%c{1},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Name:-},%X{TAGS:-},%X{X-Span-Export:-},%m%n
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS},${spring.application.name},${PID:- },[%thread],%-5level,%c{1},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Name:-},%X{TAGS:-},%X{X-Span-Export:-},%m%n
