Zipkin in now working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,6 @@ spring.data.cassandra.retry-policy=com.datastax.driver.core.policies.DefaultRetr
 # APACHE KAFKA (KafkaProperties)
 spring.kafka.bootstrap-servers=localhost:9092
 
-
 #Distributed tracing
 spring.sleuth.web.additionalSkipPattern=
 spring.application.name=Spring-Reactive
@@ -22,8 +21,10 @@ logging.level.org.springframework.cloud.sleuth=DEBUG
 spring.sleuth.baggage-keys=brequestId,bgroupId
 propagation-keys=requestId,groupId
 management.endpoints.web.exposure.include=jolokia
+sample.zipkin.enabled=true
 spring.zipkin.base-url=http://localhost:9411/
-spring.sleuth.sampler.probability=1
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.sender.type=web
 
 
 #DEV TOOLS
@@ -31,7 +32,7 @@ spring.devtools.restart.additional-paths=src/main/
 spring.h2.console.enabled=true
 spring.devtools.remote.debug.enabled=true 
 spring.devtools.remote.debug.local-port=8787
-
+ 
 
 #LOGGING
 #logging.file=server.log
@@ -48,3 +49,6 @@ logging.level.com.datastax.driver.core.QueryLogger.ERROR=TRACE
 # Appender pattern for output to the console. Only supported with the default logback setup.
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS},${spring.application.name},${PID:- },[%thread],%-5level,%c{1},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Name:-},%X{TAGS:-},%X{X-Span-Export:-},%m%n
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS},${spring.application.name},${PID:- },[%thread],%-5level,%c{1},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Name:-},%X{TAGS:-},%X{X-Span-Export:-},%m%n
+
+
+debug=true
