--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ sample.zipkin.enabled=true
 spring.zipkin.base-url=http://localhost:9411/
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.sender.type=web
+# Adds trace and span IDs to logs (when a trace is in progress)
+logging.pattern.level=%d{ABSOLUTE} [%X{X-B3-TraceId}/%X{X-B3-SpanId}] %-5p [%t] %C{2} - %m%n
 
 
 #DEV TOOLS
