--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.data.cassandra.retry-policy=com.datastax.driver.core.policies.DefaultRetr
 
 
 # APACHE KAFKA (KafkaProperties)
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=10.115.137.229:9092
 
 #Distributed tracing
 spring.sleuth.web.additionalSkipPattern=
 spring.application.name=Spring-Reactive
-logging.level.org.springframework.cloud.sleuth=DEBUG
+logging.level.org.springframework.cloud.sleuth=INFO
 spring.sleuth.baggage-keys=brequestId,bgroupId
 propagation-keys=requestId,groupId
 management.endpoints.web.exposure.include=jolokia
@@ -40,8 +40,8 @@ spring.devtools.remote.debug.local-port=8787
 #logging.file=server.log
 logging.level.org.springframework=INFO
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Settings query logger normal to trace you will see also the bind parameters
 logging.level.com.datastax.driver.core.QueryLogger.NORMAL=TRACE
@@ -51,6 +51,3 @@ logging.level.com.datastax.driver.core.QueryLogger.ERROR=TRACE
 # Appender pattern for output to the console. Only supported with the default logback setup.
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS},${spring.application.name},${PID:- },[%thread],%-5level,%c{1},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Name:-},%X{TAGS:-},%X{X-Span-Export:-},%m%n
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS},${spring.application.name},${PID:- },[%thread],%-5level,%c{1},%X{X-B3-TraceId:-},%X{X-B3-SpanId:-},%X{X-B3-ParentSpanId:-},%X{X-Span-Name:-},%X{TAGS:-},%X{X-Span-Export:-},%m%n
-
-
-debug=true
