--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,11 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
