--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,9 @@ Generated\ Files/
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 
+# Project specifics
+.vscode/
+
 # NUNIT
 *.VisualState.xml
 TestResult.xml
