--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
 			<optional>true</optional>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+          	    <groupId>io.kubernetes</groupId>
+			    <artifactId>client-java</artifactId>
+          </dependency>
+		
 	</dependencies>
 
 	<dependencyManagement>
@@ -154,6 +159,12 @@
                 <version>Finchley.RC1</version>
                 <type>pom</type>
                 <scope>import</scope>
+          </dependency>
+          <dependency>
+          	    <groupId>io.kubernetes</groupId>
+			    <artifactId>client-java</artifactId>
+    				<version>2.0.0-beta1</version>
+			    	<scope>compile</scope>
           </dependency>
 		</dependencies>
 	</dependencyManagement>
