--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.data.cassandra.retry-policy=com.datastax.driver.core.policies.DefaultRetr
 
 
 # APACHE KAFKA (KafkaProperties)
-spring.kafka.bootstrap-servers=10.115.137.229:9092
+spring.kafka.bootstrap-servers=localhost:9092
 
 #Distributed tracing
 spring.sleuth.web.additionalSkipPattern=
