--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -101,3 +101,8 @@ services:
     image: cassandra:3.0
     ports:
       - "9042:9042"
+#https://github.com/openzipkin/docker-zipkin
+  zipkin:
+    image: openzipkin/zipkin:2
+    ports:
+      - "9411:9411" 
