--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.main.allow-bean-definition-overriding=true
 #Cassandra
 spring.data.cassandra.compression=lz4
 spring.data.cassandra.consistency-level=ONE
@@ -12,7 +13,7 @@ spring.data.cassandra.retry-policy=com.datastax.driver.core.policies.DefaultRetr
 
 
 # APACHE KAFKA (KafkaProperties)
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=10.0.75.1:9092
 
 #Distributed tracing
 spring.sleuth.web.additionalSkipPattern=
